# ppa-lab24-3

./: .gitignore  Makefile  README.md  apk.opam
.github/: ocamlformat.sh  opam-test.sh
common/: ast.ml  command_hierarchy.ml  dune  parser_wrap.ml  to_string.ml
doc/: while.md  while_mem.md
examples/: aexprs.while  cp.while  lv.while  rd.while  vbusy.while
scripts/: embed.sh  format.sh  record.sh  tester.py
tests/: arith_cp_andersen.tst  arith_cp_pto.tst  arith_pto.tst  deep_dereference2_cp_andersen.tst  deep_dereference2_cp_pto.tst  deep_dereference2_pto.tst  deep_dereference3_cp_andersen.tst  deep_dereference3_cp_pto.tst  deep_dereference3_pto.tst  deep_dereference_cp_andersen.tst  deep_dereference_cp_pto.tst  deep_dereference_pto.tst  deep_update2_cp_andersen.tst  deep_update2_cp_pto.tst  deep_update2_pto.tst  deep_update_cp_andersen.tst  deep_update_cp_pto.tst  deep_update_pto.tst  deref2_cp_andersen.tst  deref2_cp_pto.tst  deref2_pto.tst  deref_cp_andersen.tst  deref_cp_pto.tst  deref_pto.tst  div2_cp_andersen.tst  div2_cp_pto.tst  div2_pto.tst  divzero_cp_andersen.tst  divzero_cp_pto.tst  divzero_pto.tst  if_cp_andersen.tst  if_cp_pto.tst  if_deref_cp_andersen.tst  if_deref_cp_pto.tst  if_deref_pto.tst  if_pto.tst  list_cp_andersen.tst  list_cp_pto.tst  list_pto.tst  malloc2_cp_andersen.tst  (+98 more)
while/: analysis.ml  ast.ml  chaotic_iteration.ml  dune  lexer.mll  parser.mly  printer.ml  simplifier.ml
while_mem/: analysis.ml  analysis_registry.ml  andersen.ml  ast.ml  cfg.ml  chaotic_iteration.ml  dune  lexer.mll  parser.mly  parser_wrapped.ml  printer.ml  (+2 more)
(+61 files in other folders)
